--- a/src/main/webapp/shop_single.html
+++ b/src/main/webapp/shop_single.html
@@ -297,7 +297,7 @@
             <!--活页卡模块////////////////////////////////////////////////////////////-->
             <li class="active"><a href="#detail" data-toggle="tab">商 品 详 情(Goods Details)</a>
             </li>
-            <li><a href="#evaluation" data-toggle="tab">商 品 评 价(Evaluation)</a>
+            <li><a href="#evaluation" data-toggle="tab">购 买 心 得(Buying Tips)</a>
             </li>
         </ul>
 
@@ -639,43 +639,12 @@
 <script src="static/wt/js/main.js"></script>
 <!-- Main slider-->
 <script src="static/wt/js/jquery.sliderPro.min.js"></script>
+<script src="static/jq/evaluate.js"></script>
 </body>
 
 </html>
-<script type="text/javascript">
-    $(function (iId) {
-        iId = getQueryString('iId');
-        alert(iId);
-//        iId = 8000003
-        $.ajax({
-            type: 'get',
-            dataType: 'json',
-            url: '/selectEvaluate/' + iId,
-            data: null,
-            success: function (result) {
-                var s = "";
-                $.each(result.data, function (i, v) {
-                    s += '<tr><td><img width="50px" height="50px" src="static/images/' + v.user.uIcon + '"/>';
-                    s += '</td><td>' + v.user.uUserName + '</td><td>' + v.evaluate.eLevel + '</td><td><img width="50px" height="50px" src="static/images/' + v.evaluate.ePhotos + '"/></td><td>' + v.evaluate.eDescription + '</td>';
-                    s += '</tr>';
-                })
-                $("#evaluated").first("tr").append(s);
-            },
-            error: function () {
-                var s = "评论加载失败";
-                alert(s);
-
-            }
-        })
-
+<script>
+    $(function () {
+        Onload1();
     })
-
-</script>
-<script type="text/javascript">
-    function getQueryString(name) {
-        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
-        var r = window.location.search.substr(1).match(reg);
-        if (r != null) return unescape(r[2]);
-        return null;
-    }
 </script>
