--- a/src/main/webapp/cart.html
+++ b/src/main/webapp/cart.html
@@ -29,34 +29,26 @@
 <!-- FULL SCREEN MENU-->
 <!-- ==========================-->
 <div class="wrap-fixed-menu" id="fixedMenu">
-
-
     <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
 
     <nav class="fullscreen-center-menu">
-
         <div id="dl-menu" class="dl-menuwrapper">
             <ul class="dl-menu menu-item list-unstyled">
-
-
                 <li class="has-children ">
                     <a href="#"><span>Home <i class="arrow_carrot-right"></i> </span></a>
                     <ul class="dl-submenu">
-
                         <li><a href="home.html"><span>Home 1</span></a></li>
                         <li><a href="home-2.html"><span>Home 2</span></a></li>
-
-
                     </ul>
                 </li>
+
                 <li><a href="about.html"><span>about</span></a></li>
+
                 <li><a href="lookbook.html"><span>lookbook</span></a></li>
 
                 <li>
                     <a href="shop-1.html"><span>shop <i class="arrow_carrot-right"></i>  </span></a>
-
                     <ul class="dl-submenu">
-
                         <li><a href="shop-1.html"><span>Catalog Grid 1</span></a></li>
                         <li><a href="shop-2.html"><span>Catalog Grid 2</span></a></li>
                         <li><a href="shop-2-list.html"><span>Catalog List</span></a></li>
@@ -65,35 +57,25 @@
                         <li><a href="shop-single-3.html"><span>Product page 3</span></a></li>
                         <li><a href="cart.html"><span>Cart page</span></a></li>
                         <li><a href="checkout.html"><span>Checkout page </span></a></li>
-
                     </ul>
-
                 </li>
-
 
                 <li class="has-children">
                     <a href="#"><span> Blog <i class="arrow_carrot-right"></i> </span></a>
                     <ul class="dl-submenu">
-
                         <li><a href="blog-main.html"><span>Blog main</span></a></li>
                         <li><a href="blog-main-2.html"><span>Blog main 2</span></a></li>
                         <li><a href="blog-main-3.html"><span>Blog main 3</span></a></li>
                         <li><a href="blog-post.html"><span>Blog post </span></a></li>
-
                     </ul>
                 </li>
 
                 <li><a href="typography.html"><span>typography</span></a></li>
+
                 <li><a href="contact.html"><span>contact</span></a></li>
-
-
             </ul>
-
         </div>
-
-
     </nav>
-
 </div>
 
 
@@ -122,6 +104,7 @@
         <button class="search-close close" type="button"><i class="fa fa-times"></i>
         </button>
     </div>
+
     <header class="header-1 header header-color-black header-topbar-hidden header-boxed-width navbar-fixed-top header-background-trans header-navibox-1-left header-navibox-2-right">
         <div class="container container-boxed-width">
             <div class="top-bar">
@@ -214,15 +197,11 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-
-
                     <div class="woocommerce">
-                        <form action="" method="post" class="cart-table ">
-
+                        <form action="" method="post" class="cart-table " id="from">
                             <!--购物车清单的表格模块///////////////////////////////////////////////////////////////////////////////////////-->
                             <div class="b-table b-cart-table ">
-                                <table class="shop_table shop_table_responsive cart table" cellspacing="0">
-                                    <thead>
+                                <table class="shop_table shop_table_responsive cart table" cellspacing="0" id="car">
                                     <tr>
                                         <td class="product-thumbnail" width="200" href="200">&nbsp;</td>
                                         <td class="product-name"><h5>产 品 名</h5></td>
@@ -231,197 +210,19 @@
                                         <td class="product-subtotal"><h5>总 价</h5></td>
                                         <td class="product-remove"><h5>操 作</h5></td>
                                     </tr>
-                                    </thead>
-                                    <tbody>
 
-                                    <tr class="cart_item">
-
-
-                                        <td class="product-thumbnail">
-                                            <a href="catalog-product.html">
-                                                <!--添加产品图片模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                <img src="static/wt/images/1.jpg"
-
-                                                     class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image">
-                                            </a></td>
-
-                                        <td data-title="Product">
-                                            <div class="caption">
-                                                <!--产品名称模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                <a class="product-name" href="/">Hyperion</a></div>
-                                        </td>
-
-                                        <td class="product-price" data-title="Price">
-							<span class="product-price total-price">
-                                    <!--产品价格模块///////////////////////////////////////////////////////////////////////////////////////-->
-							<span class="woocommerce-Price-amount amount"><span
-                                    class="woocommerce-Price-currencySymbol">£</span>875.00</span>
-                            </span>
-                                        </td>
-
-                                        <!--产品数量调整模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td class="product-quantity" data-title="Quantity" >
-                                            <div class="enumerator"><span
-                                                    class="enumerator__btn enumerator__btn_minus js-minus_btn"></span>
-                                                <input class="enumerator__input" type="text" value="1" size="3"><span
-                                                        class="enumerator__btn enumerator__btn_plus js-plus_btn"></span>
-                                            </div>
-                                        </td>
-                                        <!--产品根据计算数量和单价得出的总价小计///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td class="product-subtotal" data-title="Total">
-                                            <span class="woocommerce-Price-amount amount"><span
-                                                    class="woocommerce-Price-currencySymbol">£</span>875.00</span></td>
-                                        <td class="product-remove">
-
-                                            <!--删除物品按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                                            <a href="/" class="btn btn-remove" title="Remove this item"><i
-                                                    class="fa fa-trash fa-lg"></i></a></td>
-                                    </tr>
-                                    <tr class="cart_item">
-
-
-                                        <td class="product-thumbnail">
-                                            <a href="catalog-product.html">
-                                                <!--添加产品图片模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                <img src="static/wt/images/1.jpg"
-
-                                                     class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image">
-                                            </a></td>
-
-                                        <td data-title="Product">
-                                            <div class="caption">
-                                                <!--产品名称模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                <a class="product-name" href="/">Hyperion</a></div>
-                                        </td>
-
-                                        <td class="product-price" data-title="Price">
-							<span class="product-price total-price">
-                                    <!--产品价格模块///////////////////////////////////////////////////////////////////////////////////////-->
-							<span class="woocommerce-Price-amount amount"><span
-                                    class="woocommerce-Price-currencySymbol">£</span>875.00</span>
-                            </span>
-                                        </td>
-
-                                        <!--产品数量调整模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td class="product-quantity" data-title="Quantity" >
-                                            <div class="enumerator"><span
-                                                    class="enumerator__btn enumerator__btn_minus js-minus_btn"></span>
-                                                <input class="enumerator__input" type="text" value="1" size="3"><span
-                                                        class="enumerator__btn enumerator__btn_plus js-plus_btn"></span>
-                                            </div>
-                                        </td>
-                                        <!--产品根据计算数量和单价得出的总价小计///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td class="product-subtotal" data-title="Total">
-                                            <span class="woocommerce-Price-amount amount"><span
-                                                    class="woocommerce-Price-currencySymbol">£</span>875.00</span></td>
-                                        <td class="product-remove">
-
-                                            <!--删除物品按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                                            <a href="/" class="btn btn-remove" title="Remove this item"><i
-                                                    class="fa fa-trash fa-lg"></i></a></td>
-                                    </tr>
-                                    <tr class="cart_item">
-
-
-                                        <td class="product-thumbnail">
-                                            <a href="catalog-product.html">
-                                                <!--添加产品图片模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                <img src="static/wt/images/1.jpg"
-
-                                                     class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image">
-                                            </a></td>
-
-                                        <td data-title="Product">
-                                            <div class="caption">
-                                                <!--产品名称模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                                <a class="product-name" href="/">Hyperion</a></div>
-                                        </td>
-
-                                        <td class="product-price" data-title="Price">
-							<span class="product-price total-price">
-                                    <!--产品价格模块///////////////////////////////////////////////////////////////////////////////////////-->
-							<span class="woocommerce-Price-amount amount"><span
-                                    class="woocommerce-Price-currencySymbol">£</span>875.00</span>
-                            </span>
-                                        </td>
-
-                                        <!--产品数量调整模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td class="product-quantity" data-title="Quantity" >
-                                            <div class="enumerator"><span
-                                                    class="enumerator__btn enumerator__btn_minus js-minus_btn"></span>
-                                                <input class="enumerator__input" type="text" value="1" size="3"><span
-                                                        class="enumerator__btn enumerator__btn_plus js-plus_btn"></span>
-                                            </div>
-                                        </td>
-                                        <!--产品根据计算数量和单价得出的总价小计///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td class="product-subtotal" data-title="Total">
-                                            <span class="woocommerce-Price-amount amount"><span
-                                                    class="woocommerce-Price-currencySymbol">£</span>875.00</span></td>
-                                        <td class="product-remove">
-
-                                            <!--删除物品按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                                            <a href="/" class="btn btn-remove" title="Remove this item"><i
-                                                    class="fa fa-trash fa-lg"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <td colspan="6" class="actions">
-
-                                            <!--&lt;!&ndash;更新购物车按钮///////////////////////////////////////////////////////////////////////////////////////&ndash;&gt;-->
-                                            <!--<input type="submit" class="button" name="update_cart" value="更 新 购 物 车"-->
-                                            <!--disabled>-->
-
-
-                                            <input type="hidden" value="6bbd62fad3"><input type="hidden"></td>
-                                    </tr>
-
-                                    </tbody>
+                                    <script src="static/jq/webSocket/jquery-3.3.1.min.js"></script>
+                                    <script src="static/jq/webSocket/car_mis.js"></script>
+                                    <script>
+                                        $(function () {
+                                            select();
+                                        })
+                                    </script>
                                 </table>
                             </div>
-
-
                         </form>
-
-                        <div class="cart-collaterals">
-
-                            <div class="cart_totals calculated_shipping">
-
-
-                                <h2>购 物 车 总 计：</h2>
-
-                                <table cellspacing="0" class="shop_table shop_table_responsive">
-
-                                    <tbody>
-
-                                    <tr class="order-total">
-                                        <th>总 计</th>
-                                        <!--购物车所有东西加起来的总价格///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <td data-title="Total"><strong><span
-                                                class="woocommerce-Price-amount amount"><span
-                                                class="woocommerce-Price-currencySymbol">£</span>875.00</span></strong>
-                                        </td>
-                                    </tr>
-
-
-                                    </tbody>
-                                </table>
-
-                                <div class="wc-proceed-to-checkout">
-
-                                    <a href="checkout.html" class="checkout-button button alt wc-forward">
-                                        下 单(Proceed to Checkout)</a>
-                                </div>
-
-
-                            </div>
-
-                        </div>
-
                     </div>
-
-
                 </div>
-
-
             </div>
         </div>
     </div>
